# fastapi-2f

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: .env.example  FEATURE_FLAGS.md  main.py  requirements.txt
app/api/: health.py
app/api/v1/: __init__.py  endpoints.py  feature_flags.py
app/core/: config.py  logging.py  redis_client.py  ssm_client.py
app/examples/: feature_flag_examples.sh
app/models/: feature_flag.py
app/services/: feature_flag_service.py
app/tests/: conftest.py  test_feature_flags.py  test_health.py
iac/cdk/: app.py  eks_stack.py
iac/cdk/_lambda/: app.py
iac/cdk/_lambda/_lambda/: _lambda_stack.py
iac/cdk/_lambda/tests/unit/: test__lambda_stack.py
iac/terraform/: providers.tf  variables.tf  version.tf
infra/docker/: Dockerfile  docker-compose.yml
infra/k8s/: deployment.yaml  service.yaml  serviceaccount.yaml
